# bayesprobe

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
bayesprobe/: __init__.py  cli.py  (+37 more)
benchmarks/terminal_bench/: .gitignore  DESIGN.md  README.md  pyproject.toml
benchmarks/terminal_bench/configs/: bayesprobe-causal-qualification.yaml  bayesprobe-gate.yaml  bayesprobe-smoke.yaml  direct-gate.yaml  oracle-causal-qualification.yaml  oracle-gate.yaml  oracle-smoke.yaml
benchmarks/terminal_bench/scripts/: capture_provider_identity.py  freeze_historical_traces.py  validate_causal_qualification.py  validate_paired_gate.py  validate_smoke_run.py  write_benchmark_lock.py  write_causal_qualification_lock.py  write_paired_gate_lock.py
benchmarks/terminal_bench/src/bayesprobe_terminal_bench/: __init__.py  actions.py  agent.py  artifacts.py  causal.py  config.py  conformance.py  deadline.py  direct_agent.py  environment.py  experiment_lock.py  gateway.py  planning.py  provider_contract.py  react.py  runner_factory.py  signals.py  trajectory.py
benchmarks/terminal_bench/tests/: conftest.py  test_actions.py  test_agent.py  test_artifacts.py  test_benchmark_lock.py  test_causal.py  test_config.py  test_conformance.py  test_direct_agent.py  test_environment.py  test_experiment_lock.py  test_gateway.py  test_historical_fixtures.py  test_paired_gate.py  test_planning.py  test_provider_contract.py  test_public_reuse.py  test_qualification.py  test_react.py  test_runner_factory.py  test_trajectory.py
benchmarks/terminal_bench/tests/fixtures/causal_traces/: manifest.json
benchmarks/terminal_bench/tests/fixtures/historical_traces/: manifest.json
(+198 files in other folders)
