[project]
name = "bayesprobe"
version = "0.1.0"
description = "BayesProbe MVP core for signal-grounded belief revision"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
bayesprobe = "bayesprobe.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
